# warehouse-pipeline

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
data/sample/: customers-1000.csv  order_items.csv  orders.csv  retail_transactions.csv
data/sample/golden/: customers_golden.csv  order_items_golden.csv  orders_golden.csv  retail_transactions_golden.csv
docs/: decisions.md  dummyjson_mapping.md  grain.md  runs.md
scripts/: ci_gate.py  demo.py  release.py  write_demo_snapshots.py
sql/: 000_init.sql  010_views.sql  020_dim_customer.sql  021_dim_date.sql  022_fact_orders.sql  023_fact_order_items.sql  900_views.sql  init.md
sql/extras/: 010_revenue_by_day_country.sql  020_top_products_per_week.sql  030_paid_vs_refunded_counts.sql  040_distinct_customers_with_purchases.sql  050_fanout_trap_wrong.sql  051_fanout_trap_right.sql  fanout_trap.md
sql/publish/: 900_views.sql
sql/publish/metrics/: 010_daily_sales_summary.sql  010_revenue_by_day_country.sql  020_daily_sales_by_tender_type.sql  020_top_products_per_week.sql  030_paid_vs_refunded_counts.sql  030_weekly_top_items.sql  040_daily_discount_summary.sql  040_distinct_customers_with_purchases.sql  050_daily_order_state_summary.sql  050_fanout_trap_wrong.sql  051_fanout_trap_right.sql  fanout_trap.md
sql/schema/: 000_extensions.sql  010_tables.sql  011_watermark_columns.sql  012_cursor_state.sql  015_warehouse_tables.sql  020_indexes.sql
sql/transform/: 100_dim_customer.sql  100_fact_orders.sql  110_dim_date.sql  110_fact_order_lines.sql  120_fact_order_tenders.sql  120_fact_orders.sql  130_fact_order_items.sql
sql/warehouse/: 300_build_dim_customer.sql  310_build_dim_date.sql  320_build_fact_orders.sql  330_build_fact_order_items.sql
src/extra/ingest/: readers.py
src/extra/parsing/: registry.py  types.py
src/warehouse_pipeline/cli/: __init__.py  loader.py  main.py
src/warehouse_pipeline/db/: __init__.py  connect.py  dq_results.py  ingest_runs.py  initialize.py  reject_writers.py  run_ledger.py  sql_runner.py  staging_writers.py  work_tables.py
src/warehouse_pipeline/dq/: __init__.py  gates.py  runner.py  thresholds.py
src/warehouse_pipeline/extract/: __init__.py  bundles.py  contracts.py  dummyjson_client.py  filters.py  models.py  paginator.py  snapshot_store.py  snapshots.py  source_contract.py  source_registry.py
src/warehouse_pipeline/ingest/: summary.py
src/warehouse_pipeline/orchestration/: __init__.py  contract.py  extraction_window.py  logging.py  manifest.py  runner.py
src/warehouse_pipeline/parsing/: adapter.py  primitives.py  registry.py  schema.py  types.py
src/warehouse_pipeline/publish/: __init__.py  views.py
src/warehouse_pipeline/stage/: __init__.py  derive_fields.py  load.py  map_carts.py  map_products.py  map_square_orders.py  (+1 more)
tests/: conftest.py  test_smoke.py
tests/extra/: conftest.py  test_cli.py  test_deduping_flow.py  test_schema_smoke.py  test_table_spec.py  test_warehouse_build.py
tests/integration/: conftest.py  test_business_views.py  test_integration_smoke.py  test_load_end_to_end.py  test_schema_smoke.py
tests/unit/: conftest.py  test_cli.py  test_unit_smoke.py
(+89 files in other folders)
