# Uses hatchling.
[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"


[project]
name = "warehouse-pipeline"
version = "0.2.0"
description = "Warehouse pipeline repository."  # more add dev info to project later.
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "psycopg[binary]>=3.2",
  "httpx>=0.27",
  "pydantic>=2.7",
  "sqlparse>=0.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
pipeline = "warehouse_pipeline.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-s", "-q"]