# Uses hatchling.
[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"


[project]
name = "warehouse-pipeline"
version = "0.4.0"
description = "Warehouse pipeline repository."  # more add dev info to project later.
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "psycopg[binary]>=3.2",
  "httpx>=0.27",
  "pydantic>=2.7",
  "sqlparse>=0.5",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "pyright",
  "pre-commit",
]

[project.scripts]
pipeline = "warehouse_pipeline.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q", "--strict-markers"]
norecursedirs = [".git", ".venv", "runs", "src/extra", "tests/extra"]   # stay out of my extra dirs
markers = [
  "unit: local-only test (no docker, no live http, no external services, offline friendly)",
  "integration: touches external deps (docker/postgres/http/etc.)",
  "heavy_integration: heavy end-to-end tests, some may be flaky",
  "live_http: performs real HTTP requests",
  "docker_required: requires local Docker to be installed/usable",
  "non_ci: tests that are intentionally excluded from CI",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["runs", "src/extra", "tests/extra"]
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pyright]
include = ["src", "scripts", "tests"]
exclude = ["runs", "**/__pycache__", "src/extra", "tests/extra"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
